--- a/index.html
+++ b/index.html
@@ -13,19 +13,22 @@ button{cursor:pointer}
 #loginPage{
   max-width:320px;
   margin:150px auto;
-  padding:20px;
+  padding:20px 25px;
   border:1px solid #ccc;
   text-align:center;
+  box-sizing:border-box;
 }
 #loginPage input{
   width:100%;
   padding:8px;
   margin:6px 0;
+  box-sizing:border-box;
 }
 #loginPage select{
   width:100%;
   padding:8px;
   margin:6px 0;
+  box-sizing:border-box;
 }
 
 /* HEADER */
@@ -214,4 +217,5 @@ function showAdmin(){ showIssue(); }
 
 </body>
 </html>
+
 
