--- a/index.html
+++ b/index.html
@@ -110,6 +110,8 @@ th{background:#eee}
   <!-- NAV -->
   <div class="nav-bar">
     <span class="nav-link" onclick="showIssue()">IT-Issue</span>
+    <span class="nav-link" onclick="showRequest()">IT-Request</span>
+    <span class="nav-link" onclick="showAdmin()">IT-Admin</span>
     <span class="nav-link hidden" id="adminTab" onclick="showAdmin()">IT-Admin</span>
     <span class="logout" onclick="logout()">Logout</span>
   </div>
@@ -217,5 +219,6 @@ function showAdmin(){ showIssue(); }
 
 </body>
 </html>
+
 
 
