--- a/index.html
+++ b/index.html
@@ -118,7 +118,8 @@ th{background:#eee}
 
   <!-- CONTENT -->
   <div id="content">
-
+  <p id="welcomeText">Select a module from above.</p>
+    
     <!-- IT ISSUE -->
     <div id="issueModule">
       <h2>IT-Issue</h2>
@@ -219,6 +220,7 @@ function showAdmin(){ showIssue(); }
 
 </body>
 </html>
+
 
 
 
