--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ function login(){
   loginPage.classList.add("hidden");
   dashboard.classList.remove("hidden");
   document.getElementById("roleDisplay").innerText =
-  ROLE === "admin" ? "Role: Admin" : "Role: User";
+  ROLE === "admin" ? "👨‍💼" : "👤";
   
   // Initial dashboard state: show welcome, hide modules
 welcomeText.style.display = "block";
@@ -235,6 +235,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
