--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ th{background:#eee}
     <span class="nav-link" onclick="showIssue()">IT-Issue</span>
     <span class="nav-link" onclick="showRequest()">IT-Request</span>
     <span class="nav-link" onclick="showAdmin()">IT-Admin</span>
-    <span id="roleDisplay" style="margin-left:auto;margin-right:20px;font-weight:bold;"></span>
+    <span id="roleDisplay" style="margin-right:10px;font-weight:bold;"></span>
     <span class="logout" onclick="logout()">Logout</span>
   </div>
 
@@ -235,6 +235,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
