--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@ button{cursor:pointer}
   margin:6px 0;
   box-sizing:border-box;
 }
+  #headerRole{
+  position:absolute;
+  right:20px;
+  top:50%;
+  transform:translateY(-50%);
+  font-size:22px;
+  font-weight:bold;
+  cursor:default;
+}
 
 /* HEADER */
 .top-header{
@@ -105,6 +114,7 @@ th{background:#eee}
     <div class="header-center">
       <h2>IT Ticketing System</h2>
     </div>
+    <span id="headerRole"></span>
   </div>
 
   <!-- NAV -->
@@ -112,7 +122,6 @@ th{background:#eee}
     <span class="nav-link" onclick="showIssue()">IT-Issue</span>
     <span class="nav-link" onclick="showRequest()">IT-Request</span>
     <span class="nav-link" onclick="showAdmin()">IT-Admin</span>
-    <span id="roleDisplay" style="margin-right:10px;font-weight:bold;"></span>
     <span class="logout" onclick="logout()">Logout</span>
   </div>
 
@@ -195,8 +204,11 @@ function login(){
 
   loginPage.classList.add("hidden");
   dashboard.classList.remove("hidden");
-  document.getElementById("roleDisplay").innerText =
+document.getElementById("headerRole").innerText =
   ROLE === "admin" ? "👨‍💼" : "👤";
+
+document.getElementById("headerRole").title =
+  ROLE === "admin" ? "Admin" : "User";
   
   // Initial dashboard state: show welcome, hide modules
 welcomeText.style.display = "block";
@@ -235,6 +247,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
