--- a/index.html
+++ b/index.html
@@ -169,12 +169,16 @@ th{background:#eee}
 
 <!-- FIREBASE -->
 <script>
-firebase.initializeApp({
-  apiKey: "YOUR_KEY",
-  authDomain: "YOUR_DOMAIN",
-  projectId: "YOUR_PROJECT_ID"
-});
-const db = firebase.firestore();
+  firebase.initializeApp({
+    apiKey: "AIzaSyA1ymv16-dU8psCO-pIY0waY-Gkz3Mix9Q",
+    authDomain: "mariahomoeo-it.firebaseapp.com",
+    projectId: "mariahomoeo-it",
+    storageBucket: "mariahomoeo-it.firebasestorage.app",
+    messagingSenderId: "926576264951",
+    appId: "1:926576264951:web:fa8db2664622fb31ec75f2",
+    measurementId: "G-NM1FGJVBZK"
+  });
+  const db = firebase.firestore();
 </script>
 
 <!-- LOGIN + ROLE -->
@@ -247,6 +251,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
