--- a/index.html
+++ b/index.html
@@ -217,6 +217,7 @@ document.getElementById("headerRole").title =
   // Initial dashboard state: show welcome, hide modules
 welcomeText.style.display = "block";
 issueModule.classList.add("hidden");
+render();
 }
 
 function logout(){
@@ -251,6 +252,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
