--- a/index.html
+++ b/index.html
@@ -140,15 +140,8 @@ th{background:#eee}
         <input id="department" placeholder="Department" required>
         <input id="description" placeholder="Issue Description" required>
         
-<label>Status</label>
-<select id="status" disabled>
-  <option value="">-- Select Status --</option>
-  <option value="Open">Open</option>
-  <option value="Pending">Pending</option>
-  <option value="Work In Progress">Work In Progress</option>
-  <option value="Resolved">Resolved</option>
-  <option value="Closed">Closed</option>
-</select>
+<label for="status">Status</label>
+<input id="status" placeholder="Ticket Status">
         
         <button type="submit">Submit</button>
         <button type="button" onclick="closeForm()">Cancel</button>
@@ -263,6 +256,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
