--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ th{background:#eee}
         <input id="description" placeholder="Issue Description" required>
         
 <label for="status">Status</label>
-<input id="status" placeholder="Ticket Status">
+<input id="status" placeholder="Enter Status" required>
         
         <button type="submit">Submit</button>
         <button type="button" onclick="closeForm()">Cancel</button>
@@ -256,6 +256,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
