--- a/index.html
+++ b/index.html
@@ -84,8 +84,17 @@ th{background:#eee}
 </head>
 
 <body>
+  
+<!-- LOGIN -->  
+<div id="loginHeader">
+  <img src="logo.png" alt="Logo" class="login-logo">
 
-<!-- LOGIN -->
+  <h1>MARIA</h1>
+  <p>Homoeopathic Medical College & Hospital</p>
+  <h2>IT-Service Desk</h2>
+</div>
+
+
 <div id="loginPage">
   <h2>Login</h2>
 
@@ -256,6 +265,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
