--- a/index.html
+++ b/index.html
@@ -80,6 +80,35 @@ input,select{padding:6px;width:100%;margin:4px 0}
 table{width:100%;border-collapse:collapse;margin-top:10px}
 th,td{border:1px solid #ccc;padding:6px;text-align:center}
 th{background:#eee}
+
+#loginHeader{
+  text-align:center;
+  margin-top:40px;
+}
+
+.login-logo{
+  height:90px;
+  margin-bottom:10px;
+}
+
+#loginHeader h1{
+  font-size:48px;
+  margin:0;
+  letter-spacing:4px;
+}
+
+#loginHeader p{
+  margin:6px 0;
+  font-size:18px;
+}
+
+#loginHeader h2{
+  margin:10px 0 20px;
+  font-size:26px;
+  font-weight:normal;
+}
+
+  
 </style>
 </head>
 
@@ -265,6 +294,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
