--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ button{cursor:pointer}
 /* LOGIN */
 #loginPage{
   max-width:320px;
-  margin:150px auto;
+  margin:20px auto;   /* reduced gap */
   padding:20px 25px;
   border:1px solid #ccc;
   text-align:center;
@@ -294,6 +294,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
