--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@ th{background:#eee}
 
   <h1>MARIA</h1>
   <p>Homoeopathic Medical College & Hospital</p>
-  <h2>IT-Service Desk</h2>
+  <h2>IT - Desk</h2>
 </div>
 
 
@@ -309,6 +309,7 @@ function showAdmin(){
 
 </body>
 </html>
+
 
 
 
