--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@ th{background:#eee}
 <div id="requestModule" class="hidden">
   <h2>IT-Request </h2>
 
-  <button onclick="openForm()">➕ Create Request</button>
+  <button onclick="openRequestForm()">➕ Create Request</button>
   <button onclick="exportExcel()">📊 Export Excel</button>
 
   <form id="requestForm" class="hidden">
@@ -377,6 +377,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
