--- a/index.html
+++ b/index.html
@@ -228,23 +228,23 @@ th{background:#eee}
   <button onclick="exportExcel()">📊 Export Excel</button>
 
   <form id="requestForm" class="hidden">
-    <!-- Changed IDs for IT-Request -->
-    <input id="requestDivision" placeholder="Division" required>
-    <input id="requestDepartment" placeholder="Department" required>
+  <input id="requestDivision" placeholder="Division" required>
+  <input id="requestDepartment" placeholder="Department" required>
 
-    <input
-      id="requestDescription"
-      placeholder="Request Description (max 20 characters)"
-      maxlength="20"
-      required
-    >
+  <input
+    id="requestDescription"
+    placeholder="Request Description (max 20 characters)"
+    maxlength="20"
+    required
+  >
 
-    <label for="requestStatus">Status</label>
-    <input id="requestStatus" placeholder="Enter Status">
+  <label>Status</label>
+  <input id="requestStatus" placeholder="Enter Status">
 
-    <button type="submit">Submit</button>
-    <button type="button" onclick="closeForm()">Cancel</button>
-  </form>
+  <button type="submit">Submit</button>
+  <button type="button" onclick="closeForm()">Cancel</button>
+</form>
+
 
   <table>
     <thead>
@@ -377,6 +377,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
