--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ th{background:#eee}
   <h2>IT-Request </h2>
 
   <button onclick="openRequestForm()">➕ Create Request</button>
-  <button onclick="exportExcel()">📊 Export Excel</button>
+  <button onclick="exportRequestExcel()">📊 Export Excel</button>
 
   <form id="requestForm" class="hidden">
   <input id="requestDivision" placeholder="Division" required>
@@ -377,6 +377,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
