--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ th{background:#eee}
 <input id="status" placeholder="Enter Status" required>
         
         <button type="submit">Submit</button>
-        <button type="button" onclick="closeForm(); return false;" formvalidate>Cancel</button>
+        <button type="button" onclick="closeForm()">Cancel</button>
       </form>
 
       <table>
@@ -436,6 +436,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
