--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ th{background:#eee}
 
         
 <label for="status">Status</label>
-<input id="status" placeholder="Enter Status" required>
+<input id="status" placeholder="Enter Status">
         
         <button type="submit">Submit</button>
         <button type="button" onclick="closeForm()">Cancel</button>
@@ -436,6 +436,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
