--- a/index.html
+++ b/index.html
@@ -208,7 +208,8 @@ th{background:#eee}
 <input id="status" placeholder="Enter Status">
         
         <button type="submit">Submit</button>
-        <button type="button" onclick="closeForm()">Cancel</button>
+        <button
+  type="button" formnovalidate onclick="closeForm(); event.preventDefault();"> Cancel </button>
       </form>
 
       <table>
@@ -436,6 +437,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
