--- a/index.html
+++ b/index.html
@@ -208,8 +208,7 @@ th{background:#eee}
 <input id="status" placeholder="Enter Status">
         
         <button type="submit">Submit</button>
-        <button
-  type="button" formnovalidate onclick="closeForm(); event.preventDefault();"> Cancel </button>
+        <button type="button" onclick="closeIssueForm()">Cancel</button>
       </form>
 
       <table>
@@ -437,6 +436,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
