--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@ th{background:#eee}
     <!-- IT ISSUE -->
     <div id="issueModule" class="hidden">
       <h2>IT-Issue</h2>
-      <button onclick="openForm()">➕ Create Ticket</button>
+      <button onclick="openIssueForm()">➕ Create Ticket</button>
       <button onclick="exportExcel()">📊 Export Excel</button>
 
       <form id="ticketForm" class="hidden">
@@ -436,6 +436,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
