--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@ button{cursor:pointer}
   display:flex;
   align-items:center;
   padding:1px 20px;
-  position:relative;
+  position:fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 1000;
 }
 .logo-left{height:60px;margin-right:20px}
 .header-left h1{font-size:52px;margin:0;letter-spacing:4px}
@@ -65,13 +70,20 @@ button{cursor:pointer}
   padding:10px;
   display:flex;
   align-items:center;
+  position: fixed;
+  top: 80px;
+  left: 0;
+  width: 100%;
+  z-index: 999;
 }
 .nav-link{margin:0 18px;font-size:18px;cursor:pointer}
 .logout{margin-left:auto;margin-right:20px;font-weight:bold;cursor:pointer}
 
 /* CONTENT */
-#content{padding:20px}
-
+#content{
+  padding:20px;
+  margin-top: 140px;   /* 🔥 header (80) + nav (~60) */
+}
 /* FORM */
 form{background:#f9f9f9;padding:15px;margin:10px 0}
 input,select{padding:6px;width:100%;margin:4px 0}
@@ -436,6 +448,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
