--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ button{cursor:pointer}
   font-size:22px;
   font-weight:bold;
   cursor:default;
+  z-index: 1100;
 }
 
   /* ===== STICKY ACTION BAR ===== */
@@ -487,6 +488,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
