--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ button{cursor:pointer}
 /* Sticky module headings */
 .module-heading {
   position: sticky;
-  top: 140px;       /* header + nav height */
+  top: 90px;       /* header + nav height */
   background: white;
   margin: 0;
   padding: 8px 10px;
@@ -58,7 +58,7 @@ button{cursor:pointer}
   position: sticky;
   top: 180px; /* header + nav */
   background: white;
-  padding: 8px 10;
+  padding: 8px 10px;
   z-index: 801;
   display: flex;
   align-items: center;
@@ -77,7 +77,7 @@ button{cursor:pointer}
 #requestModule thead th,
 #adminModule thead th{
   position: sticky;
-  top: 220px;     /* header + nav + buttons */
+  top: 170px;     /* header + nav + buttons */
   background: #eee;
   z-index: 800;
 }
@@ -85,8 +85,9 @@ button{cursor:pointer}
 #issueModule,
 #requestModule,
 #adminModule{
-  max-height: calc(100vh - 180px);
+  max-height: calc(100vh - 90px);
   overflow-y: auto;
+  padding-top: 0px; 
 }
 
 
@@ -266,9 +267,7 @@ th{background:#eee}
       <form id="ticketForm" class="hidden">
         <input id="division" placeholder="Division" required>
         <input id="department" placeholder="Department" required>
-        <input id="description" placeholder="Issue Description (max 20 characters)" maxlength="20" required>
-
-        
+        <input id="description" placeholder="Issue Description (max 20 characters)" maxlength="20" required>   
 <label for="status">Status</label>
 <input id="status" placeholder="Enter Status">
         
@@ -506,6 +505,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
