--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ button{cursor:pointer}
   margin:6px 0;
   box-sizing:border-box;
 }
- #headerRole{
-  position:absolute;
-  right:20px;
-  top:50%;
-  transform:translateY(-50%);
-  font-size:26px;        /* optional */
-  z-index: 1300;         /* 🔥 higher than header */
-  pointer-events: none; /* optional – prevents click issues */
+#headerRole{ 
+position:absolute; 
+right:20px; top:50%; 
+transform:translateY(-50%); 
+font-size:22px; 
+font-weight:bold; 
+cursor:default; 
+z-index: 1100; 
 }
 
 
@@ -83,14 +83,17 @@ button{cursor:pointer}
 }
 
 /* HEADER */
-.top-header{
-  background:#9aa7a7;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 80px;
-  z-index: 1200;   /* 🔥 was 1000 */
+.top-header{ 
+background:#9aa7a7; 
+color:white; 
+display:flex; 
+align-items:center; 
+padding:1px 20px; 
+position:fixed; 
+top: 0; 
+left: 0; 
+width: 100%; 
+height: 80px; z-index: 1000; 
 }
 
 .logo-left{height:60px;margin-right:20px}
@@ -495,6 +498,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
