--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ height: 80px; z-index: 1000;
 
 .logo-left{height:60px;margin-right:20px}
 .header-left h1{font-size:52px;margin:0;letter-spacing:4px}
-.header-left p{margin:5px 0;font-size:18px}
+.header-left p{margin:-3px 0 0;font-size:18px}
 .header-center{
   position:absolute;
   left:50%;
@@ -538,6 +538,7 @@ function showAdmin(){
 <script src="session.js"></script>
 </body>
 </html>
+
 
 
 
